--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "inngest": "^3.40.1",
     "lighthouse": "^12.7.1",
     "morgan": "^1.10.0",
-    "puppeteer": "^24.12.1"
+    "puppeteer": "^24.12.1",
+    "puppeteer-core": "^24.12.1"
   }
 }
