--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   },
   "dependencies": {
     "@inngest/agent-kit": "^0.9.0",
+    "chrome-launcher": "^1.2.0",
     "cors": "^2.8.5",
     "inngest": "^3.40.1",
     "lighthouse": "^12.7.1",
-    "morgan": "^1.10.0",
-    "puppeteer": "^24.12.1"
+    "morgan": "^1.10.0"
   }
 }
